# gazebo_ros_l515

./: .gitignore  INTEGRATION_GUIDE.md  JAZZY_SUPPORT.md  PR_DESCRIPTION.md  README.md  TESTING_GUIDE.md  UBUNTU24_COMMANDS.md  VERSION_SUPPORT.md
realsense2_description/: CMakeLists.txt  package.xml
realsense2_description/launch/: example_robot_with_l515.launch.py  gazebo.launch  gazebo.launch.py  view_l515_model.launch  view_l515_model.launch.py  view_l515_model_rviz_gazebo.launch  view_l515_model_rviz_gazebo.launch.py
realsense2_description/rviz/: urdf.rviz
realsense2_description/urdf/: _l515.gazebo.xacro  _l515.urdf.xacro  _usb_plug.urdf.xacro  example_mobile_robot_with_l515.urdf.xacro  test_l515_camera.urdf.xacro
realsense_gazebo_plugin/: CMakeLists.txt  package.xml
realsense_gazebo_plugin/include/realsense_gazebo_plugin/: RealSensePlugin.h  RealSensePluginHarmonic.h  gazebo_ros_realsense.h
realsense_gazebo_plugin/src/: RealSensePlugin.cpp  RealSensePluginHarmonic.cpp  gazebo_ros_realsense.cpp
