<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_gazebo_plugin</name>
  <version>3.0.0</version>
  <description>Intel RealSense L515 Gazebo plugin for ROS2 Jazzy + Gazebo Harmonic</description>

  <maintainer email="aglauocnv@relay.firefox.com">Zoheb Abai</maintainer>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>

  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/ZohebAbai/gazebo_ros_l515/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>gz-sim8</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-sensors8</depend>
  <depend>gz-rendering8</depend>
  <depend>gz-common5</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
